sample-app/solutions/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-cookies
  labels:
    component: fortune-cookies
    module: app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fortune-cookies
      module: app
  template:
    metadata:
      labels:
        component: fortune-cookies
        module: app
    spec:
      imagePullSecrets:
      - name: training-registry
      containers:
      - name: app
        image: h.ingress.yul38.k8s-train.shoot.canary.k8s-hana.ondemand.com/training/fortune-cookies:v1
        ports:
        - containerPort: 8080
          name: app-port
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 800Mi
