sample-app/solutions/db-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    component: fortune-cookies
    module: db
spec:
  ports:
  - port: 5432
    name: db-port
  clusterIP: None
  selector:
    component: fortune-cookies
    module: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    component: fortune-cookies
    module: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      component: fortune-cookies
      module: db
  template:
    metadata:
      labels:
        component: fortune-cookies
        module: db
    spec:
      containers:
      - name: db-container
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: db-port
        volumeMounts:
        - name: db-volume
          mountPath: /var/lib/postgresql/data/
  volumeClaimTemplates:
  - metadata:
      name: db-volume
      labels:
        component: fortune-cookies
        module: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
