sample-app/solutions/app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune-cookies
  labels:
    component: ads
    module: app
  annotations:
    cert.gardener.cloud/purpose: managed
    cert.gardener.cloud/commonname: <short-name>.ingress.<your-trainings-cluster>.<your-project-name>.shoot.canary.k8s-hana.ondemand.com
    cert.gardener.cloud/dnsnames: <long-hostname>.ingress.<your-trainings-cluster>.<your-project-name>.shoot.canary.k8s-hana.ondemand.com
spec:
  rules:
  - host: <long-hostname>.ingress.<your-trainings-cluster>.<your-project-name>.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fortune-cookies
            port:
              name: http
  tls:
    - hosts:
      - <long-hostname>.ingress.<your-trainings-cluster>.<your-project-name>.shoot.canary.k8s-hana.ondemand.com
      secretName: fortune-cookies-tls-secret
